<resources>
    <string name="app_name">KardexV1.1</string>
    <string name="title_activity_menues">Bienvenido(a)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--TITULO DE ACTIVITIES -->
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_cursando">Cursando actualmente</string>
    <string name="title_activity_horario">Horario</string>
    <string name="title_activity_horario_maestro">Maestros en curso</string>
    <string name="title_activity_unidades">Unidades</string>
    <string name="title_activity_foro">Foro</string>
    <string name="title_activity_mapa_tec">Mapa Tecnológico</string>
    <string name="title_activity_intern__unidades">"Detalle de unidades "</string>
    <string name="title_activity_horario_real__maestro">Horario docente</string>

    <string name="section_title">hello</string>
    <string name="section_format">Horario del dia: </string>
    <!-- MENU OPCIONES -->
    <string name="horasycursos">Horarios y cursos</string>
    <string name="calif">Calificaciones</string>
    <string name="horario">Horario</string>
    <string name="horario_maestros">Horario maestros</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="mapas">Mapa</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="salida">Salir</string>
    <!-- Principal -->
    <string name="accesokardex">Acceso Kardex</string>
    <string name="numerocontrol">Numero de control</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder">Acceder</string>

    <!-- MENUES -->
    <string name="Nombre">NOMBRE</string>
    <string name="Carrera">CARRERA</string>
    <string name="Semestre">SEMESTRE</string>
    <string name="Creditos">CREDITOS ACUMULADOS</string>
    <string name="Modulo">MODULO DE ESPECIALIDAD</string>
    <string name="desliza">Dezlize a la derecha u oprima el boton de menu en la esquina superior izquierda</string>

    <string name="tuscursos">Materias en curso</string>

    <string-array name="ItemsSalones">
        <item>Aulas</item>
        <item>E</item>
        <item>D</item>
        <item>C</item>
        <item>B</item>
        <item>H</item>
        <item>L</item>
        <item>O</item>
        <item>S</item>
        <item>T</item>
        <item>MC</item>
        <item>CS</item>
        <item>MD</item>
        <item>Pintura</item>
    </string-array>

    <string-array name="ItemsLabs">
        <item>Laboratorios</item>
        <item>Bioquimica</item>
        <item>Civil</item>
        <item>Computo</item>
        <item>Biotecnologia</item>
        <item>Sistemas</item>
        <item>Industrial</item>
        <item>Fisica</item>
        <item>Quimica</item>
        <item>Electromecanica</item>
        <item>Econ/Admin</item>
    </string-array>

    <string-array name="ItemsAdmin">
        <item>Ed. Admin</item>
        <item>Capi</item>
        <item>Difusión</item>
        <item>Incubadora</item>
        <item>Cafeteria</item>
        <item>Biblioteca</item>
        <item>C. computo</item>
        <item>Div. estudios</item>
        <item>Ingenierias</item>
        <item>Ed. admin</item>
    </string-array>
</resources>
