<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/horasycursos">
            <menu>
                <item
                    android:id="@+id/cursando"
                    android:title="@string/calif"
                    android:icon="@drawable/ic_action_paste"/>
                <item
                    android:id="@+id/horario"
                    android:title="@string/horario"
                    android:icon="@drawable/ic_action_accept"/>
                <item
                    android:id="@+id/hoariomaestro"
                    android:title="@string/horario_maestros"
                    android:icon="@drawable/ic_action_group"/>
            </menu>
        </item>
        <item android:title="@string/ubicaciones">
            <menu>
                <item
                    android:id="@+id/mapa"
                    android:title="@string/mapas"
                    android:icon="@android:drawable/ic_menu_mylocation"/>
            </menu>
        </item>
        <item android:title="@string/cerrar_sesion">
            <menu>
                <item android:id="@+id/salir"
                    android:title="@string/salida"
                    android:icon="@drawable/ic_action_cancel"/>
            </menu>
        </item>
</group>
</menu>