<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accesokardex"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#000000" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondoframe">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:hint="@string/numerocontrol"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:singleLine="false"
            android:layout_gravity="center_horizontal|top" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:maxLength="25"
            android:id="@+id/editText"
            android:layout_below="@+id/editText2"
            android:layout_alignStart="@+id/editText"
            android:hint="@string/contrasena"
            android:gravity="center"
            android:layout_marginTop="85dp"
            android:textColorHint="#ffffff"
            android:textColor="#fdfcfbfb"
            android:layout_gravity="center_horizontal|top" />

        <Button
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/acceder"
            android:id="@+id/button"
            android:background="@drawable/botonpulsado"
            android:textColor="#ffffff"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="40dp"/>

    </FrameLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
